Erweitere das Arbeitsblatt Rekursion um weitere Beispiele

--- a/docs/240312/src/rekursion.ipynb
+++ b/docs/240312/src/rekursion.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rekursion in Beispielen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "lrE1Y2EzfJnS"
    },
    "source": [
-    "# Die Gausssche Summenformel"
+    "## Die Gausssche Summenformel"
    ]
   },
   {
@@ -131,6 +138,171 @@
     "    \n",
     "print(f'Die Summe der Zahlen von 1 '\n",
     "      f'bis 100 ist {gauss_recursive(100)}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fakultät"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mit Fakultät ($n!$) wird in der Mathematik jene Funktion bezeichnet mit der\n",
+    "alle natürlichen Zahlen $\\leq n$ miteinander multipliziert werden.\n",
+    "\n",
+    "$n! = 1 \\cdot 2 \\cdot ... \\cdot (n-1) \\cdot n = \\prod\\limits_{k=1}^{n}\n",
+    "k$\n",
+    "\n",
+    "Als Besonderheit muss mann wissen, dass $0! = 1$ definiert ist."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python kann dies mit einer `for` Schleife berechnet werden. In der\n",
+    "folgenden Zelle wird eine entsprechende Funktion definiert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Das Resultat von 5! ist 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial_loop(n : int) -> int:\n",
+    "    numbers = [i for i in range(1, n+1)]\n",
+    "    \n",
+    "    result = 1\n",
+    "    for n in numbers:\n",
+    "        result *= n\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "print(f'Das Resultat von 5! ist '\n",
+    "      f'{factorial_loop(5)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion kann allerdings auch rekursiv definiert werden. Die\n",
+    "Definition sieht dann folgendermassen aus:\n",
+    "\n",
+    "$$\n",
+    "n! =\n",
+    "\\left\\{\n",
+    "    \\begin{array}{lll}\n",
+    "        1,&n=0 \\lor n=1&\\text{Basisfall}\\\\\n",
+    "        n \\times (n - 1)!, &\\forall n > 1& \\text{Rekursionsfall}\\\\\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$\n",
+    "\n",
+    "Entsprechend kann eine Funktion zur Berechnung von $n!$ auch rekursiv\n",
+    "implementiert werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Das Resultat von 5! ist 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial_recursive(n : int) -> int:\n",
+    "    if n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial_recursive(n-1)\n",
+    "    \n",
+    "print(f'Das Resultat von 5! ist '\n",
+    "      f'{factorial_recursive(5)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fibonacci-Folge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Fibonacci-Folge - benannt nach dem Italienischen Mathematiker\n",
+    "[Leonardo Fibonacci](https://de.wikipedia.org/wiki/Leonardo_Fibonacci) \n",
+    "ist eine Zahlenfolge, in welcher die nächste Zahl die Summe der beiden\n",
+    "vorangegangenen Zahlen bildet. In Zahlen sieht das folgendermassen aus:\n",
+    "\n",
+    "$$\n",
+    "1, 1, 2, 3, 5, 8, 13, \\dots\n",
+    "$$\n",
+    "\n",
+    "<figure>\n",
+    "<img src=\"../images/Fibonacci_numbers_in_Zurich_HB.jpg\" style=\"width:75%\">\n",
+    "<figcaption align = \"left\"> \n",
+    "<a href=\"https://de.wikipedia.org/wiki/Fibonacci-Folge#Rezeption_in_Kunst_und_Unterhaltung\">Quelle</a>  (besucht am 6. März 24)</figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "Die Fibonacci-Folge wird rekursiv deifiniert:\n",
+    "\n",
+    "$$\n",
+    "f_n = f_{n-1} + f_{n-2}, \\forall n \\geq 3\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Damit drängt sich auf, dass eine Funktion, welche die $n$-te Fibonacci\n",
+    "Zahl ausgibt, ebenfalls rekursiv implementiert wird."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die zehnte Fibonacci Zahl ist 55.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n : int) -> int:\n",
+    "    if n == 1 or n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacci(n-1) + fibonacci(n-2)\n",
+    "    \n",
+    "print(f'Die zehnte Fibonacci Zahl ist '\n",
+    "      f'{fibonacci(10)}.')"
    ]
   }
  ],
