Füge iterative Implementation zur Berechnung der n-ten Fibonacci Zahl ein

--- a/docs/240312/src/rekursion.ipynb
+++ b/docs/240312/src/rekursion.ipynb
@@ -109,9 +109,7 @@
    "metadata": {},
    "source": [
     "Im Rekursionsfall steht \"$\\forall n > 1$\". Das $\\forall$ Zeichen ist der\n",
-    "sogenannte Allquantor und bedeutet hier \"für alle $n$ grösser als 1.  \n",
-    "Mit Bezug auf das beschriebene Problemlösungsverfahren kann hier $n-1$\n",
-    "eingesetzt werden."
+    "sogenannte Allquantor und bedeutet hier \"**für alle** $n$ grösser als $1$.  "
    ]
   },
   {
@@ -154,10 +152,11 @@
     "Mit Fakultät ($n!$) wird in der Mathematik jene Funktion bezeichnet mit der\n",
     "alle natürlichen Zahlen $\\leq n$ miteinander multipliziert werden.\n",
     "\n",
-    "$n! = 1 \\cdot 2 \\cdot ... \\cdot (n-1) \\cdot n = \\prod\\limits_{k=1}^{n}\n",
-    "k$\n",
+    "$$\n",
+    "n! = 1 \\cdot 2 \\cdot ... \\cdot (n-1) \\cdot n = \\prod\\limits_{k=1}^{n} k\n",
+    "$$\n",
     "\n",
-    "Als Besonderheit muss mann wissen, dass $0! = 1$ definiert ist."
+    "Als Besonderheit muss mann wissen, dass $0! = 1$ gilt."
    ]
   },
   {
@@ -185,6 +184,9 @@
     "def factorial_loop(n : int) -> int:\n",
     "    numbers = [i for i in range(1, n+1)]\n",
     "    \n",
+    "    \"\"\"result wird gleich 1 gesetzt, \n",
+    "    weil 1 das neutrale Element der\n",
+    "    Multiplikation ist \"\"\"\n",
     "    result = 1\n",
     "    for n in numbers:\n",
     "        result *= n\n",
@@ -192,7 +194,7 @@
     "    return result\n",
     "\n",
     "print(f'Das Resultat von 5! ist '\n",
-    "      f'{factorial_loop(5)}')"
+    "      f'{factorial_loop(5)}.')"
    ]
   },
   {
@@ -237,7 +239,7 @@
     "        return n * factorial_recursive(n-1)\n",
     "    \n",
     "print(f'Das Resultat von 5! ist '\n",
-    "      f'{factorial_recursive(5)}')"
+    "      f'{factorial_recursive(5)}.')"
    ]
   },
   {
@@ -252,7 +254,7 @@
    "metadata": {},
    "source": [
     "Die Fibonacci-Folge - benannt nach dem Italienischen Mathematiker\n",
-    "[Leonardo Fibonacci](https://de.wikipedia.org/wiki/Leonardo_Fibonacci) \n",
+    "[Leonardo Fibonacci](https://de.wikipedia.org/wiki/Leonardo_Fibonacci) - \n",
     "ist eine Zahlenfolge, in welcher die nächste Zahl die Summe der beiden\n",
     "vorangegangenen Zahlen bildet. In Zahlen sieht das folgendermassen aus:\n",
     "\n",
@@ -269,7 +271,7 @@
     "Die Fibonacci-Folge wird rekursiv deifiniert:\n",
     "\n",
     "$$\n",
-    "f_n = f_{n-1} + f_{n-2}, \\forall n \\geq 3\n",
+    "f_n = f_{n-1} + f_{n-2},\\ \\text{sofern}\\ n \\geq 3\n",
     "$$"
    ]
   },
@@ -303,6 +305,42 @@
     "    \n",
     "print(f'Die zehnte Fibonacci Zahl ist '\n",
     "      f'{fibonacci(10)}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Umkehrung der vorangegangenen beiden Beispiele kann jetzt die\n",
+    "rekursive Implementierung für die Berechnung der $n$-ten Fibonacci Zahl\n",
+    "eine Implementierung mit einer Schleife vorgenommen werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die zehnte Fibonacci Zahl ist 55.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci_loop(n : int) -> int:\n",
+    "    if n == 1 or n ==2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        result = [1, 1]\n",
+    "        for i in range(2, n):\n",
+    "            result.append(result[i-1]+result[i-2])\n",
+    "        return result[-1]\n",
+    "\n",
+    "print(f'Die zehnte Fibonacci Zahl ist '\n",
+    "      f'{fibonacci_loop(10)}.')"
    ]
   }
  ],
