Ersetze Begriff Liste mit Sequenz

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -76,16 +76,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Algorithmus S** (Selection Sort). Gegeben sei eine Liste mit\n",
-    "sortierbaren Elementen. Gesucht ist die Liste mit den aufsteigend\n",
+    "**Algorithmus S** (Selection Sort). Gegeben sei eine Sequenz mit\n",
+    "sortierbaren Elementen. Gesucht ist die Sequenz mit den aufsteigend\n",
     "sortierten Elementen.\n",
     "\n",
-    "**S1.** \\[Kleinstes Element.\\] Suche das kleinste Element in der Liste.  \n",
+    "**S1.** \\[Kleinstes Element.\\] Suche das kleinste Element der der Sequenz.  \n",
     "**S2.** \\[Platztausch.\\] Das kleinste Element tauscht den Platz mit\n",
-    "dem Element zuvorderst in der Liste.  \n",
-    "**S3.** \\[Liste kürzen.\\] Das vorderste Element der Liste wird von der\n",
-    "Weiterverarbeitung ausgenommen. Wenn die gekürzte Liste eine Länge von 1\n",
-    "aufweist, ist die Liste sortiert. Andernfalls weiter mit Schritt S1. "
+    "dem Element zuvorderst in der Sequenz.  \n",
+    "**S3.** \\[Liste kürzen.\\] Das vorderste Element der Sequenz wird von der\n",
+    "Weiterverarbeitung ausgenommen. Wenn die gekürzte Sequenz eine Länge von 1\n",
+    "aufweist, ist die Sequenz sortiert. Andernfalls weiter mit Schritt S1. "
    ]
   },
   {
