Beginne Schrittweise Musterlösung
Der erste Schritt ist die Identifikation des kleinsten Elementes

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -119,6 +119,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Musterlösung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Kleinstes Element suchen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_sequenz = [3,5, 1, 4, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Das kleinste Element der Testsequenz ist 1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "minimum = test_sequenz[0]\n",
+    "for x in test_sequenz:\n",
+    "    if x < minimum:\n",
+    "        minimum = x\n",
+    "        \n",
+    "print(f'Das kleinste Element der '\n",
+    "      f'Testsequenz ist {minimum}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Platztausch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -137,6 +190,16 @@
     "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
     "    \n",
     "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def selection_sort_b(seq):\n",
+    "    "
    ]
   }
  ],
