Visualisierung der Sortiersequenz mit Indiezes

--- a/docs/240305/tausch.tex
+++ b/docs/240305/tausch.tex
@@ -21,14 +21,15 @@
     \node[draw, square, right=0cm of b] (c) {1};
     \node[draw, square, right=0cm of c] (d) {4};
     \node[draw, square, right=0cm of d] (e) {2};
-    \node[right= of e] (e_text) {Länge = 5};
+    \node[right= of e] (e_text) {Sequenz};
 
     % S1.1
-    \node[square, below = of a] (a11) {3}; 
-    \node[square, right=0cm of a11] (b11) {5};
-    \node[square, right=0cm of b11] (c11) {1};
-    \node[square, right=0cm of c11] (d11) {4};
-    \node[square, right=0cm of d11] (e11) {2};
+    \node[square, below =1.5mm of a] (a11) {0}; 
+    \node[square, right=0cm of a11] (b11) {1};
+    \node[square, right=0cm of b11] (c11) {2};
+    \node[square, right=0cm of c11] (d11) {3};
+    \node[square, right=0cm of d11] (e11) {4};
+    \node[right= of e11] (e11_text) {Indizes};
     
 
 
