Schreibe den Code für die Musterlösung
Die Funktion der Musterlösung wird Schrittweise aufgebaut.

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -134,16 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_sequenz = [3,5, 1, 4, 2]"
+    "test_sequenz = [3, 5, 1, 4, 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,34 +172,170 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def selection_sort(arr):\n",
-    "    # Durchlaufen des Arrays\n",
-    "    for i in range(len(arr)):\n",
-    "        # Finde das kleinste Element im verbleibenden unsortierten Array\n",
-    "        min_idx = i\n",
-    "        for j in range(i+1, len(arr)):\n",
-    "            if arr[j] < arr[min_idx]:\n",
-    "                min_idx = j\n",
-    "        \n",
-    "        # Tausche das gefundene kleinste Element mit dem ersten Element\n",
-    "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
-    "    \n",
-    "    return arr"
+    "Zur Verdeutlichung hier als erstes die zu sortierende Sequenz mit den\n",
+    "dazugehörigen Indizes:\n",
+    "\n",
+    "![Sortiersequenz](tausch.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir suchen für den Tausch nicht das kleinste Element, sondern den Index\n",
+    "des kleinsten Elements."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Der Index des kleinsten Elements der Testsequenz ist 2.\n"
+     ]
+    }
+   ],
+   "source": [
+    "minimum_index = 0\n",
+    "for i in range(len(test_sequenz)):\n",
+    "    if test_sequenz[i] < test_sequenz[minimum_index]:\n",
+    "        minimum_index = i\n",
+    "\n",
+    "print(f'Der Index des kleinsten Elements der '\n",
+    "      f'Testsequenz ist {minimum_index}.')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mit dieser Information kann das kleinste Element an die erste Stelle\n",
+    "getauscht werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 5, 3, 4, 2]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = test_sequenz[0]\n",
+    "test_sequenz[0] = test_sequenz[minimum_index]\n",
+    "test_sequenz[minimum_index] = tmp\n",
+    "\n",
+    "test_sequenz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sequenz kürzen und Schlaufe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zum Abschluss muss die die Sequenz gekürzt werden und der Prozess\n",
+    "wiederholt werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(len(test_sequenz)):\n",
+    "    minimum_index = i\n",
+    "    \n",
+    "    for j in range(i + 1, len(test_sequenz)):\n",
+    "        if test_sequenz[j] < test_sequenz[minimum_index]:\n",
+    "            minimum_index = j\n",
+    "        \n",
+    "    tmp = test_sequenz[i]\n",
+    "    test_sequenz[i] = test_sequenz[minimum_index]\n",
+    "    test_sequenz[minimum_index] = tmp\n",
+    "            \n",
+    "test_sequenz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Selection Sort als Funktion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zum Abschluss kann die Vorgehensweise in eine Funktion zusammegefasst werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def selection_sort_b(seq):\n",
-    "    "
+    "def selection_sort(seq):\n",
+    "    for i in range(len(seq)):\n",
+    "        minimum_index = i\n",
+    "        for j in range(i, len(seq)):\n",
+    "            if seq[j] < seq[minimum_index]:\n",
+    "                minimum_index = j\n",
+    "        seq[i], seq[minimum_index] = seq[minimum_index], seq[i]\n",
+    "    return seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(selection_sort([5, 4, 3, 2, 1]))"
    ]
   }
  ],
