Arbeite an der Formulierung des Arbeitsblattes

--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -25,12 +25,14 @@
    "source": [
     "Merge Sort basiert auf der Idee, dass es effizienter ist, vorsortierte\n",
     "Elemente zusammenzuführen als von Grund auf Elemente sortieren zu\n",
-    "müssen. Darauf aufbauend wird die unsortierten Elemente in sortierte\n",
-    "Elemente aufgeteilt. Dies ist spätestens dann der Fall, wenn nur noch\n",
-    "einzelne Elemente vorliegen. Die so atomar aufgeteilten Elemente werden\n",
-    "anschliessend zu sortierten Teileinheiten zusammengefügt, die dann\n",
-    "wiederum sortiert zusammengefügt werden, bis am schluss alle Elemente in\n",
-    "sortierter Reihenfolge vorliegen.\n",
+    "müssen. Aufbauend auf dieser Idee, wird die unsortierte Sequenz solange\n",
+    "in Teile zerlegt, bis nur noch sortierte Sequenzen vorliegen. Dies ist\n",
+    "spätestens dann der Fall, wenn eine solcherart zerlegte Sequenz nur noch\n",
+    "ein Element beinhaltet. Sequenzen mit nur einem Element sind immer\n",
+    "sortiert. Diese bereits sortierten Sequenzen werden anschliessend zu\n",
+    "ebenfalls sortierten grösseren Sequenzen zusammengefügt (gemerged) - bis\n",
+    "die zusammengefügte Sequenz wieder alle ursprünglichen - jetzt aber\n",
+    "sortierten - Elemente enthält.\n",
     "\n",
     "Diese Vorgehensweise kann folgendermassen visualisiert werden:"
    ]
