--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -82,7 +82,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge(seq_a, seq_b):\n",
+    "    result = []\n",
+    "    length_a = len(seq_a)\n",
+    "    length_b = len(seq_b)\n",
+    "    working_range = min(length_a, length_b)\n",
+    "\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "\n",
+    "    while i < working_range and j < working_range:\n",
+    "        if seq_a[i] <= seq_b[j]:\n",
+    "            result.append(seq_a[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            result.append(seq_b[j])\n",
+    "            j += 1\n",
+    "    \n",
+    "    if i >= j:\n",
+    "        result = result + seq_b[j:]\n",
+    "    else:\n",
+    "        result = result + seq_a[i:]\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_sort(seq):\n",
+    "    if len(seq) == 1:\n",
+    "        return seq\n",
+    "    else:\n",
+    "        middle = len(seq) // 2\n",
+    "    \n",
+    "        left = merge_sort(seq[:middle])\n",
+    "        right = merge_sort(seq[middle:])\n",
+    "\n",
+    "        return merge(left, right)"
+   ]
   }
  ],
  "metadata": {
