--- a/docs/240312/src/rekursion.ipynb
+++ b/docs/240312/src/rekursion.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/240312/src/rekursion.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Rekursion in Beispielen"
    ]
   },
@@ -99,8 +108,8 @@
    "source": [
     "Der Basisfall ist einerseits der einfachste Fall und andererseits auch\n",
     "der letzte Fall, der bearbeitet werden muss.  \n",
-    "Beides ist wichtig. Das der Basisfall der einfachste Fall ist, hilft das\n",
-    "Problem zu lösen. Das der Basisfall der Lezte Fall ist, der bearbeitet\n",
+    "Beides ist wichtig. Dass der Basisfall der einfachste Fall ist, hilft das\n",
+    "Problem zu lösen. Dass der Basisfall der Lezte Fall ist, der bearbeitet\n",
     "werden muss, ermöglicht es, die Rekursion zu beenden."
    ]
   },
