Ergänze formelle Beschreibung des Algorithmus

--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -74,7 +74,16 @@
     "bis die beiden Teile eine Länge von 1 haben.\n",
     "\n",
     "**M4.** [Merge.] Die sortierten Sequenzen $L$ und $R$ werden zu einer\n",
-    "einzigen sortierten Sequenz $B$ zusammengefügt."
+    "einzigen sortierten Sequenz $B$ zusammengefügt.\n",
+    "- Initialisiere einen neuen Index $i$ für $L$, $j$ für $R$ und $k$ für $B$.\n",
+    "- Vergleiche die Elemente von $L$ und $R$ an den Positionen $i$ und $j$.\n",
+    "  Füge das kleinere Element in die Sequenz $B$ an der Position $k$ ein\n",
+    "  und erhöhe den entsprechenden Index ($i$ oder $j$) sowie $k$. \n",
+    "- Wiederhole diesen Vergleichs- und Einfügeprozess, bis alle Elemente\n",
+    "  von $L$ und $R$ in $B$ übertragen worden sind. \n",
+    "- Falls Elemente in $L$ oder $R$ verbleiben, nachdem einer der Teile\n",
+    "  vollständig eingefügt wurde, kopiere die restlichen Elemente direkt in\n",
+    "  $B$. "
    ]
   },
   {
