--- a/docs/240312/images/merge_sort_flow_chart.tex
+++ b/docs/240312/images/merge_sort_flow_chart.tex
@@ -1,45 +1,36 @@
-\documentclass[border=10pt]{standalone}
-\usepackage{tikz}
+% example.tex
+\documentclass[dvisvgm]{standalone}
 
-\usetikzlibrary{shapes,arrows,positioning}
+\usepackage{amsmath}
+\usepackage[usenames,dvipsnames]{xcolor}
+\usepackage{tikz}
+\usetikzlibrary {arrows.meta,
+                 positioning,
+                 shapes.geometric}
+
+ \tikzset{
+        base/.style={draw, align=center, minimum height=4ex},
+        proc/.style={base, rectangle, text width=8em},
+        io/.style={trapezium, trapezium left angle=70, trapezium right
+                   angle=110, draw, text width=8em, %minimum width=2cm, 
+                   %minimum height=1cm
+                   },
+        test/.style={base, diamond, aspect=2,
+                     %text width=5em
+                     },
+        term/.style={proc, rounded corners},
+        myarrow/.style={-Stealth, line width=0.25mm},
+ }
 
 \begin{document}
+\begin{tikzpicture}
+    \node[draw, term] (a) {Start};
+    \node[draw, io, below= of a] (b) {Sequenz (unsortiert)};
+    \node[draw, test, below= of b] (c) {$n\leq 1$};
+    \node[draw, proc, below= of c] (d) {Teile Sequenz in $L$ und $R$};
+    \node[draw, test, below left= of d] (e) {$L > 1$};
+    \node[draw, test, below right= of d] (f) {$R > 1$};
 
-\tikzstyle{box} = [draw, rounded corners, minimum width=2cm, minimum height=1cm, text centered];
-
-\begin{tikzpicture}[node distance=2cm]
-
-% Start- und Endknoten
-\node[box] (start) {Start};
-\node[box] (ende) {Ende};
-
-% Teilschritte
-\node[box] (merge) {Teile Array in zwei Hälften und sortiere sie rekursiv};
-\node[box, below=of merge] (check) {Ist Arraylänge 1 oder 0?};
-\node[box, below=of check, yes=ende, no=merge] (ja) {Ja};
-\node[box, below=of check, yes=merge2, no=merge] (nein) {Nein};
-
-% Rekursion
-\node[box, below=of merge2] (sort2) {Sortiere rechte Hälfte};
-
-% Zusammenführen
-\node[box, below=of merge] (merge3) {Führe die beiden sortierten Hälften zusammen};
-
-% Pfeile
-\draw[->] (start) -- (merge);
-\draw[->] (merge) -- (check);
-\draw[->] (check) -- (ja);
-\draw[->] (ja) -- (ende);
-\draw[->] (check) -- (nein);
-\draw[->] (nein) -- (merge2);
-\draw[->] (merge2) -- (sort2);
-\draw[->] (sort2) -- (merge3);
-\draw[->] (merge3) -- (ende);
-
-% Beschriftungen
-\node[above=of merge] {Arraylänge $n > 1$};
-\node[above=of check] {Arraylänge $n \leq 1$};
-
+    \draw[myarrow] (a) edge (b);
 \end{tikzpicture}
-
 \end{document}
