--- a/docs/240312/images/merge_sort_flow_chart.tex
+++ b/docs/240312/images/merge_sort_flow_chart.tex
@@ -5,6 +5,7 @@
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{tikz}
 \usetikzlibrary {arrows.meta,
+                 calc,
                  positioning,
                  shapes.geometric}
 
@@ -30,7 +31,22 @@
     \node[draw, proc, below= of c] (d) {Teile Sequenz in $L$ und $R$};
     \node[draw, test, below left= of d] (e) {$L > 1$};
     \node[draw, test, below right= of d] (f) {$R > 1$};
+    \node[draw, test, below=of $(e.south)!0.5!(f.south)$]
+         (g) {$L[0] < R[0]$};
+    \node[draw, proc, below left= of g] (h) {$L[0]$ nach $B$ übertragen};
+    \node[draw, proc, below right= of g] (i) {$R[0]$ nach $B$ übertragen};
 
     \draw[myarrow] (a) edge (b);
+    \draw[myarrow] (b) edge (c);
+    \draw[myarrow] (c) edge (d);
+    \draw[myarrow] (d.south west) -| (e);
+    \draw[myarrow] (d.south east) -| (f);
+    \draw[myarrow] (e.west) -| ++(-.5,0) |- (d.north west);
+    \draw[myarrow] (f.east) -| ++(.5,0) |- (d.north east);
+    \draw[myarrow] (e) -| (g.north);
+    \draw[myarrow] (f) -| (g.north);
+    \draw[myarrow] (g) -| (h);
+    \draw[myarrow] (g) -| (i);
+
 \end{tikzpicture}
 \end{document}
