Füge iterative Lösung für Gauss ein

--- a/docs/240312/src/rekursion_muloe.ipynb
+++ b/docs/240312/src/rekursion_muloe.ipynb
@@ -67,6 +67,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Um zu zeigen, was rekursive Implementationen leisten, wird die Gausssche\n",
+    "Summenformel in der nächsten Zelle iterativ implementiert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Summe der Zahlen von 1 bis 100 ist 5050.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gauss_iterative(n : int) -> int:\n",
+    "    result = 0             # 0 ist das neutrale Element der Addition\n",
+    "    for i in range(n+1):   # range(n) endet 1 vor n \n",
+    "        result = result + i\n",
+    "    return result\n",
+    "        \n",
+    "print(f'Die Summe der Zahlen von 1 '\n",
+    "      f'bis 100 ist {gauss_iterative(100)}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Alternativ kann die Formel aber auch rekursiv implementiert werden.\n",
     "Entsprechend stellt sich die Frage, was wäre ein kleineres, aber\n",
     "grundsätzlich gleichartiges Problem?  \n",
