Formuliere die Einleitung zur iterativen Implementation neu

--- a/docs/240312/src/rekursion_muloe.ipynb
+++ b/docs/240312/src/rekursion_muloe.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Um zu zeigen, was rekursive Implementationen leisten, wird die Gausssche\n",
+    "Um den unterschied zur rekursiven Lösung zu verdeutlichen, wird die Gausssche\n",
     "Summenformel in der nächsten Zelle iterativ implementiert."
    ]
   },
