Setze Link auf die Musterlösung

--- a/docs/240312/src/rekursion_muloe.ipynb
+++ b/docs/240312/src/rekursion_muloe.ipynb
@@ -99,6 +99,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Der Ablauf der for Schlaufe für `gauss_iterative(5)` ist in der\n",
+    "folgenden Grafik visualisiert:\n",
+    "\n",
+    "![Visualisierung `gauss_iterative`](../images/gauss_iterative.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Alternativ kann die Formel aber auch rekursiv implementiert werden.\n",
     "Entsprechend stellt sich die Frage, was wäre ein kleineres, aber\n",
     "grundsätzlich gleichartiges Problem?  \n",
