Setze Link auf Summennotation

--- a/docs/240312/src/rekursion_muloe.ipynb
+++ b/docs/240312/src/rekursion_muloe.ipynb
@@ -35,7 +35,9 @@
     "Auftrag gegen haben, die Zahlen von 1 bis 100 zusammenzuzählen.\n",
     "\n",
     "Gauss soll nach kurzer Zeit mit der Lösung zum Lehrer gegangen sein.\n",
-    "Gauss' Lösung basierte auf folgender Formel:\n",
+    "Gauss' Lösung basierte auf folgender Formel\n",
+    "([hier](../../allgemeines/summenformel.md) \n",
+    "finden Sie eine Erklärung zur Summennotation):\n",
     "\n",
     "$$\n",
     "1 + 2 + 3 + ... + (n-1) + n = \\sum_{k=1}^{n}k = \\frac{n(n+1)}{2}\n",
