Schreibe Reverse Funktion

--- a/docs/240312/src/rekursion.ipynb
+++ b/docs/240312/src/rekursion.ipynb
@@ -310,6 +310,53 @@
     "print(f'Die zehnte Fibonacci Zahl ist '\n",
     "      f'{fibonacci_loop(10)}.')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wörter umdrehen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gesucht ist eine Funktion, welche ein Wort rückwärts schreibt (bsp.\n",
+    "Kantonsschule nach eluhcssnotnaK)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse(s : str) -> str:\n",
+    "    if len(s) == 0 or len(s) == 1:\n",
+    "        return s\n",
+    "    else:\n",
+    "        head = s[0]\n",
+    "        tail = s[1:]\n",
+    "        return reverse(tail) + head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eluhcssnotnaK\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reverse('Kantonsschule'))"
+   ]
   }
  ],
  "metadata": {
