--- a/docs/240312/src/rekursion.ipynb
+++ b/docs/240312/src/rekursion.ipynb
@@ -322,8 +322,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gesucht ist eine Funktion, welche ein Wort rückwärts schreibt (bsp.\n",
-    "Kantonsschule nach eluhcssnotnaK)."
+    "Gesucht ist eine rekursive Funktion, welche ein Wort rückwärts schreibt\n",
+    "(bsp. Kantonsschule nach eluhcssnotnaK)."
    ]
   },
   {
