--- a/docs/240312/src/rekursion_muloe.ipynb
+++ b/docs/240312/src/rekursion_muloe.ipynb
@@ -283,13 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Das Resultat von 5! ist 120.\n"
+     ]
+    }
+   ],
    "source": [
     "def factorial_recursive(n : int) -> int:\n",
-    "    # TODO: rekursive Implementation der Fakultätsfunktion\n",
-    "    pass\n",
+    "    if n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial_recursive(n - 1)\n",
     "    \n",
     "print(f'Das Resultat von 5! ist '\n",
     "      f'{factorial_recursive(5)}.')"
@@ -338,14 +348,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die zehnte Fibonacci Zahl ist 55.\n"
+     ]
+    }
+   ],
    "source": [
     "def fibonacci(n : int) -> int:\n",
-    "    # TODO: Implementation der rekursiven Berechnung der n-ten\n",
-    "    # Fibonacci-Zahl\n",
-    "    pass\n",
+    "    if n == 1 or n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacci(n - 1) + fibonacci(n - 2)\n",
     "    \n",
     "print(f'Die zehnte Fibonacci Zahl ist '\n",
     "      f'{fibonacci(10)}.')"
@@ -362,17 +381,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die zehnte Fibonacci Zahl ist 55.\n"
+     ]
+    }
+   ],
    "source": [
     "def fibonacci_loop(n : int) -> int:\n",
-    "    # TODO: iterative Implementation der Berechnung der n-ten\n",
-    "    # Fibonacci-Zahl \n",
-    "    pass\n",
+    "    a = 1\n",
+    "    b = 1\n",
+    "    \n",
+    "    if n == 1 or n == 2:\n",
+    "        return a\n",
+    "    \n",
+    "    for i in range(3, n + 1):\n",
+    "        tmp = b\n",
+    "        b = a + b\n",
+    "        a = tmp\n",
+    "    \n",
+    "    return b\n",
     "\n",
     "print(f'Die zehnte Fibonacci Zahl ist '\n",
     "      f'{fibonacci_loop(10)}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wörter umdrehen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementieren Sie eine rekursive Funktion, welche Wörter umdreht."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kantonsschule Büelrain retour gelelsen ist  niarleüB eluhcssnotnaK .\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse(text : str) -> str:\n",
+    "    if len(text) <= 1:\n",
+    "        return text\n",
+    "    else:\n",
+    "        head = text[0]\n",
+    "        tail = text[1:]\n",
+    "\n",
+    "        return reverse(tail) + head\n",
+    "\n",
+    "print('Kantonsschule Büelrain retour gelelsen ist ', \n",
+    "      reverse('Kantonsschule Büelrain'),'.')"
    ]
   }
  ],
