Füge Illsutration ein

--- a/docs/240312/src/rekursion_muloe.ipynb
+++ b/docs/240312/src/rekursion_muloe.ipynb
@@ -374,6 +374,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Hier eine Visualisierung der Anzahl erforderlichen Aufrufe für die\n",
+    "Berechnung der fünften Fibonacci Zahl. Aus darstellerischen Gründen wird\n",
+    "die Funktion als $f(n)$ geschrieben."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Illustration Fibonacci Aufrufe](../images/fibonacci.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In Umkehrung der vorangegangenen beiden Beispiele kann jetzt die\n",
     "rekursive Implementierung für die Berechnung der $n$-ten Fibonacci Zahl\n",
     "eine Implementierung mit einer Schleife vorgenommen werden."
