Füge Visualisierung reverse ein

--- a/docs/240312/src/rekursion_muloe.ipynb
+++ b/docs/240312/src/rekursion_muloe.ipynb
@@ -443,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kantonsschule Büelrain retour gelelsen ist  niarleüB eluhcssnotnaK .\n"
+      "Mock retour gelelsen ist  kcoM .\n"
      ]
     }
    ],
@@ -464,8 +464,17 @@
     "\n",
     "        return reverse(tail) + head\n",
     "\n",
-    "print('Kantonsschule Büelrain retour gelelsen ist ', \n",
-    "      reverse('Kantonsschule Büelrain'),'.')"
+    "print('Mock retour gelelsen ist ', \n",
+    "      reverse('Mock'),'.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nachfolgend der Versuch einer Visualisierung der Funktion `reverse()`.\n",
+    "\n",
+    "![Visualisierung `reverse()`](../images/reverse.svg)"
    ]
   }
  ],
