Füge Visualisierung ein

--- a/docs/240326/merge_sort.ipynb
+++ b/docs/240326/merge_sort.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "source": [
     "<figure>\n",
-    "<img src=\"../images/Merge_sort_algorithm_diagram.svg\" style=\"width:75%\">\n",
+    "<img src=\"images/Merge_sort_algorithm_diagram.svg\" style=\"width:75%\">\n",
     "<figcaption align = \"center\"> Darstellung übernommen aus https://en.wikipedia.org/wiki/Merge_sort (besucht am 5. März 24)</figcaption>\n",
     "</figure>"
    ]
