--- a/docs/240326/images/lin_log.ipynb
+++ b/docs/240326/images/lin_log.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "118182b0",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "67b578ec",
    "metadata": {},
    "outputs": [
@@ -92,18 +92,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.965784284662087\n"
+      "13.287712379549449\n"
      ]
     }
    ],
    "source": [
-    "print(math.log2(1000))"
+    "print(math.log2(10_000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "082fe222",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8192"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**13"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "082fe222",
+   "id": "fc5b0aba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -125,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
