Erfasse Korrekturen in der Musterlösung

--- a/docs/240326/images/binary_search_flow_chart.tex
+++ b/docs/240326/images/binary_search_flow_chart.tex
@@ -32,7 +32,7 @@
     \node[draw, test, below= of c] (d) {$lo > hi$};
     \node[draw, proc, below= of d] (e) {B2. Mitte ermitteln};
     \node[draw, test, below= of e] (f) {B3. \linebreak
-          $K < \lor > \lor = K_{mid}$};
+          $K\ ?\ K_{mid}$};
 
     \node[draw, align=center, io, below= of f] (g) {$mid$};
     \node[draw, term, below= of g] (h) {End};
