Schreibe die Musterlösung für den binären Suchbaum
Die Listings werden mit Flow Charts illustriert

--- a/docs/240604/bst_musterloesung.ipynb
+++ b/docs/240604/bst_musterloesung.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,13 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BST:\n",
-    "    def __init__(self, root=None):\n",
-    "        self.root = root"
+    "    def __init__(self, key = None, value = None):\n",
+    "        if key == None:\n",
+    "            self.root = None\n",
+    "        else:\n",
+    "            self.root = Node(key, value)"
    ]
   },
   {
@@ -327,13 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BST:\n",
-    "    def __init__(self, root=None):\n",
-    "        self.root = root\n",
+    "    def __init__(self, key=None, value=None):\n",
+    "        if key == None:\n",
+    "            self.root = None\n",
+    "        else:\n",
+    "            self.root = Node(key, value)\n",
     "\n",
     "    def search(self, key, ref=None):\n",
     "\n",
@@ -346,46 +352,87 @@
     "        if key == ref.key:\n",
     "            return ref\n",
     "        \n",
-    "        elif key < ref.key:\n",
+    "        elif key < ref.key and ref.left:\n",
     "            return self.search(key, ref.left)\n",
     "        \n",
-    "        else:\n",
+    "        elif key < ref.key:\n",
+    "            return\n",
+    "        \n",
+    "        elif key > ref.key and ref.right:\n",
     "            return self.search(key, ref.right)\n",
+    "        \n",
+    "        else:\n",
+    "            return\n",
     "        \n",
     "        \n",
     "\n",
-    "    def insert(self, key, value = None):\n",
-    "        node = Node(key)\n",
+    "    def insert(self, key, value=None, ref=None):\n",
+    "\n",
+    "        node = Node(key, value)\n",
     "\n",
     "        if self.root is None:\n",
     "            self.root = node\n",
     "            return\n",
-    "        \n",
-    "        ref = self.root      \n",
     "\n",
-    "        if node.key <= ref.key and ref.left is None:\n",
+    "        if ref is None:\n",
+    "            ref = self.root\n",
+    "\n",
+    "        if key <= ref.key and ref.left is None:\n",
     "            ref.left = node\n",
-    "            node.parent = ref\n",
+    "            node.parent    = ref\n",
     "            return\n",
-    "      \n",
-    "        elif node.key <= ref.key:\n",
-    "            while ref.left:\n",
-    "                ref = ref.left\n",
-    "            ref.left = node\n",
-    "            node.parent = ref\n",
-    "            return\n",
-    "        \n",
-    "        elif node.key > ref.key and ref.right is None:\n",
+    "\n",
+    "        elif key <= ref.key:\n",
+    "            ref = ref.left\n",
+    "            return self.insert(key, value, ref)\n",
+    "\n",
+    "        elif key > ref.key and ref.right is None:\n",
     "            ref.right = node\n",
-    "            node.parent = ref\n",
+    "            node.parent     = ref\n",
     "            return\n",
-    "        \n",
+    "\n",
     "        else:\n",
-    "            while ref.right:\n",
-    "                ref = ref.right\n",
-    "            ref.right = node\n",
-    "            node.parent = ref.right\n",
-    "            return"
+    "            ref = ref.right\n",
+    "            return self.insert(key, value, ref)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baum = BST(45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [55, 38, 32, 40]\n",
+    "for n in numbers:\n",
+    "    baum.insert(n)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = baum.search(101)\n",
+    "print(result)"
    ]
   },
   {
