Füge linker Ast ein

--- a/docs/240604/bst_musterloesung.ipynb
+++ b/docs/240604/bst_musterloesung.ipynb
@@ -456,8 +456,11 @@
    "outputs": [],
    "source": [
     "class BST:\n",
-    "    def __init__(self, root=None):\n",
-    "        self.root = root\n",
+    "    def __init__(self, key = None, value = None):\n",
+    "        if key == None:\n",
+    "            self.root = None\n",
+    "        else:\n",
+    "            self.root = Node(key, value)\n",
     "\n",
     "    def search(self, key, ref=None):\n",
     "        if self.root is None:\n",
