--- a/docs/240604/traversal.ipynb
+++ b/docs/240604/traversal.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def in_order_traversal(tree, node = None, result=[]):\n",
+    "def in_order_traversal(tree, node=None, result=None):\n",
+    "    if result is None:\n",
+    "        result = []\n",
     "    \n",
     "    if tree.root is None:\n",
     "        return result\n",
@@ -35,50 +37,32 @@
     "    if node is None:\n",
     "        node = tree.root\n",
     "\n",
-    "    if node.left is None and node.right is None and node.parent is None:\n",
-    "        result.append(node.key)\n",
-    "        return result\n",
-    "      \n",
     "    if node.left:\n",
-    "        result = [node.key] + result\n",
-    "        \n",
-    "        return in_order_traversal(tree, node.left, result) \n",
+    "        in_order_traversal(tree, node.left, result)\n",
     "    \n",
-    "    if node.left is None and node.right is None:\n",
-    "        result = [node.key] + result\n",
-    "\n",
-    "    if node.parent.right:\n",
-    "        return in_order_traversal(tree, node.parent.right, result)\n",
+    "    result.append(node.key)\n",
     "    \n",
-    "    if node.parent:\n",
-    "        return in_order_traversal(tree, node.parent, result)\n",
+    "    if node.right:\n",
+    "        in_order_traversal(tree, node.right, result)\n",
     "    \n",
-    "    if node.parent is None:\n",
-    "        return result  \n"
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[75], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m t\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m      4\u001b[0m t\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m r \u001b[38;5;241m=\u001b[39m \u001b[43min_order_traversal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresult \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(t\u001b[38;5;241m.\u001b[39mto_ascii())\n",
-      "Cell \u001b[1;32mIn[74], line 16\u001b[0m, in \u001b[0;36min_order_traversal\u001b[1;34m(tree, node, result)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mleft:\n\u001b[0;32m     14\u001b[0m     result \u001b[38;5;241m=\u001b[39m [node\u001b[38;5;241m.\u001b[39mkey] \u001b[38;5;241m+\u001b[39m result\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43min_order_traversal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mleft\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mleft \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m node\u001b[38;5;241m.\u001b[39mright \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m     result \u001b[38;5;241m=\u001b[39m [node\u001b[38;5;241m.\u001b[39mkey] \u001b[38;5;241m+\u001b[39m result\n",
-      "Cell \u001b[1;32mIn[74], line 16\u001b[0m, in \u001b[0;36min_order_traversal\u001b[1;34m(tree, node, result)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mleft:\n\u001b[0;32m     14\u001b[0m     result \u001b[38;5;241m=\u001b[39m [node\u001b[38;5;241m.\u001b[39mkey] \u001b[38;5;241m+\u001b[39m result\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43min_order_traversal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mleft\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mleft \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m node\u001b[38;5;241m.\u001b[39mright \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m     result \u001b[38;5;241m=\u001b[39m [node\u001b[38;5;241m.\u001b[39mkey] \u001b[38;5;241m+\u001b[39m result\n",
-      "Cell \u001b[1;32mIn[74], line 25\u001b[0m, in \u001b[0;36min_order_traversal\u001b[1;34m(tree, node, result)\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m in_order_traversal(tree, node\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mright, result)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mparent:\n\u001b[1;32m---> 25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43min_order_traversal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mparent \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "    \u001b[1;31m[... skipping similar frames: in_order_traversal at line 16 (1 times)]\u001b[0m\n",
-      "Cell \u001b[1;32mIn[74], line 25\u001b[0m, in \u001b[0;36min_order_traversal\u001b[1;34m(tree, node, result)\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m in_order_traversal(tree, node\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mright, result)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mparent:\n\u001b[1;32m---> 25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43min_order_traversal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mparent \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "    \u001b[1;31m[... skipping similar frames: in_order_traversal at line 16 (1484 times), in_order_traversal at line 25 (1483 times)]\u001b[0m\n",
-      "Cell \u001b[1;32mIn[74], line 25\u001b[0m, in \u001b[0;36min_order_traversal\u001b[1;34m(tree, node, result)\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m in_order_traversal(tree, node\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mright, result)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mparent:\n\u001b[1;32m---> 25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43min_order_traversal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mparent \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "Cell \u001b[1;32mIn[74], line 16\u001b[0m, in \u001b[0;36min_order_traversal\u001b[1;34m(tree, node, result)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mleft:\n\u001b[0;32m     14\u001b[0m     result \u001b[38;5;241m=\u001b[39m [node\u001b[38;5;241m.\u001b[39mkey] \u001b[38;5;241m+\u001b[39m result\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43min_order_traversal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mleft\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39mleft \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m node\u001b[38;5;241m.\u001b[39mright \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m     result \u001b[38;5;241m=\u001b[39m [node\u001b[38;5;241m.\u001b[39mkey] \u001b[38;5;241m+\u001b[39m result\n",
-      "\u001b[1;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result [5, 10, 45, 50]\n",
+      "│   ┌── 50\n",
+      "└── 45\n",
+      "    └── 10\n",
+      "        └── 5\n",
+      "\n"
      ]
     }
    ],
@@ -94,24 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 32, 38, 40, 42, 45, 46, 50, 60, 66, 73]\n"
+     ]
     }
    ],
    "source": [
-    "test = [1, 2,3]\n",
-    "result = [0] + test\n",
-    "result"
+    "order = in_order_traversal(baum)\n",
+    "print(order)"
    ]
   }
  ],
